Somewhat finish the allnews section

--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1152,6 +1152,7 @@ body{
 
 
 .newsTopContainer{
+    opacity: 0;
     display: flex;
     flex-direction: column;
     padding: 160px 100px 80px 100px;
@@ -1351,6 +1352,7 @@ body{
 
 
 .newsBottomContainer{
+    opacity: 0;
     display: flex;
     flex-direction: column;
     padding: 80px 100px 120px 100px;
@@ -2830,6 +2832,121 @@ body{
     margin-top: 100px;
 }
 
+
+
+.AllNewsTitle{
+    padding: 160px 70px 40px 70px;
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.paginationControlsContainer{
+    display: flex;
+    padding-bottom: 120px;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    align-self: center;
+    gap: 8px;
+}
+.paginationArrow{
+    cursor: pointer;
+    width: 34px;
+    padding: 4px;
+    transition: all 0.1s;
+}
+.paginationLinks{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.paginationLink{
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+    font-family: 'DM_Sans_SemiBold';
+    color: #979797;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s;
+}
+.innerAllNewsContainer{
+    padding: 0px 70px 100px 70px;
+    width: 100%;
+}
+.allNewsGridContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    row-gap: 100px;
+    column-gap: 30px;
+    width: 100%;
+}
+.allNewsCard{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+.allNewsImg{
+    width: 100%;
+    min-height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.allNewsCard:hover img{
+    scale: 1.02;
+}
+.allNewsCard:hover p{
+    color: black;
+}
+.allNewsCard:hover .allNewsCardTitle{
+    color:#F7A524;
+}
+.allNewsImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.allNewsText{
+    width: 94%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    height: 100%;
+}
+.allNewsCardTitle{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+    margin-top: 8px;
+    transition: all 0.1s;
+}
+.allNewsInlineInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.allNewsLine{
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+    height: 1px;
+    width: 100%;
+}
+.readingTime{
+    transition: all 0.1s;
+}
+.newsDate{
+    transition: all 0.1s;
+}
+
 }
 
 @media screen and (max-width: 950px){
@@ -3564,6 +3681,143 @@ body{
     width: 100%;
     margin-top: 100px;
 }
+
+
+.AllNewsContainer{
+    opacity: 0;
+}
+.allNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.AllNewsTitle{
+    padding: 160px 50px 40px 50px;
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.paginationControlsContainer{
+    display: flex;
+    padding-bottom: 120px;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    align-self: center;
+    gap: 8px;
+}
+.paginationArrow{
+    cursor: pointer;
+    width: 34px;
+    padding: 4px;
+    transition: all 0.1s;
+}
+.paginationLinks{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.paginationLink{
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+    font-family: 'DM_Sans_SemiBold';
+    color: #979797;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s;
+}
+.paginationLink:hover{
+    color: #F7A524;
+}
+.paginationLink.active{
+    color: black;
+    font-size: 22px;
+    font-family: 'DM_Sans_ExtraBold';
+    transition: all 0.1s;
+}
+.paginationLink.active:hover{
+    color: #000000;
+    cursor: default;
+}
+.paginationArrow:hover{
+    filter: brightness(0);
+}
+.innerAllNewsContainer{
+    padding: 0px 50px 100px 50px;
+    width: 100%;
+}
+.allNewsGridContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    row-gap: 100px;
+    column-gap: 30px;
+    width: 100%;
+}
+.allNewsCard{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+.allNewsImg{
+    width: 100%;
+    min-height: 250px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.allNewsCard:hover img{
+    scale: 1.02;
+}
+.allNewsCard:hover p{
+    color: black;
+}
+.allNewsCard:hover .allNewsCardTitle{
+    color:#F7A524;
+}
+.allNewsImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.allNewsText{
+    width: 94%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    height: 100%;
+}
+.allNewsCardTitle{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+    margin-top: 8px;
+    transition: all 0.1s;
+}
+.allNewsInlineInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.allNewsLine{
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+    height: 1px;
+    width: 100%;
+}
+.readingTime{
+    transition: all 0.1s;
+}
+.newsDate{
+    transition: all 0.1s;
+}
 }
 
 @media screen and (max-width: 830px){
@@ -3794,6 +4048,144 @@ body{
     object-fit: cover;
     object-position: center;
     transition: all 0.25s;
+}
+}
+
+@media screen and (max-width :740px){
+    .AllNewsContainer{
+    opacity: 0;
+}
+.allNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.AllNewsTitle{
+    padding: 160px 50px 40px 50px;
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.paginationControlsContainer{
+    display: flex;
+    padding-bottom: 120px;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    align-self: center;
+    gap: 8px;
+}
+.paginationArrow{
+    cursor: pointer;
+    width: 34px;
+    padding: 4px;
+    transition: all 0.1s;
+}
+.paginationLinks{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.paginationLink{
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+    font-family: 'DM_Sans_SemiBold';
+    color: #979797;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s;
+}
+.paginationLink:hover{
+    color: #F7A524;
+}
+.paginationLink.active{
+    color: black;
+    font-size: 22px;
+    font-family: 'DM_Sans_ExtraBold';
+    transition: all 0.1s;
+}
+.paginationLink.active:hover{
+    color: #000000;
+    cursor: default;
+}
+.paginationArrow:hover{
+    filter: brightness(0);
+}
+.innerAllNewsContainer{
+    padding: 0px 50px 100px 50px;
+    width: 100%;
+}
+.allNewsGridContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    row-gap: 100px;
+    column-gap: 30px;
+    width: 100%;
+}
+.allNewsCard{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+.allNewsImg{
+    width: 100%;
+    min-height:400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.allNewsCard:hover img{
+    scale: 1.02;
+}
+.allNewsCard:hover p{
+    color: black;
+}
+.allNewsCard:hover .allNewsCardTitle{
+    color:#F7A524;
+}
+.allNewsImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.allNewsText{
+    width: 94%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    height: 100%;
+}
+.allNewsCardTitle{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+    margin-top: 8px;
+    transition: all 0.1s;
+}
+.allNewsInlineInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.allNewsLine{
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+    height: 1px;
+    width: 100%;
+}
+.readingTime{
+    transition: all 0.1s;
+}
+.newsDate{
+    transition: all 0.1s;
 }
 }
 
@@ -4200,6 +4592,133 @@ body{
 .newsBottom4{
     margin-top: 20px;
     grid-template-columns: 4/5;
+}
+
+.AllNewsContainer{
+    opacity: 0;
+}
+.allNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.AllNewsTitle{
+    padding: 160px 50px 40px 50px;
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.paginationControlsContainer{
+    display: flex;
+    padding-bottom: 120px;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    align-self: center;
+    gap: 8px;
+}
+.paginationArrow{
+    cursor: pointer;
+    width: 34px;
+    padding: 4px;
+    transition: all 0.1s;
+}
+.paginationLinks{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.paginationLink{
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+    font-family: 'DM_Sans_SemiBold';
+    color: #979797;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s;
+}
+.paginationLink:hover{
+    color: #F7A524;
+}
+.paginationLink.active{
+    color: black;
+    font-size: 22px;
+    font-family: 'DM_Sans_ExtraBold';
+    transition: all 0.1s;
+}
+.paginationLink.active:hover{
+    color: #000000;
+    cursor: default;
+}
+.paginationArrow:hover{
+    filter: brightness(0);
+}
+.innerAllNewsContainer{
+    padding: 0px 50px 100px 50px;
+    width: 100%;
+}
+.allNewsGridContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    row-gap: 70px;
+    column-gap: 30px;
+    width: 100%;
+}
+.allNewsCard{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+.allNewsImg{
+    width: 100%;
+    min-height:320px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.allNewsImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.allNewsText{
+    width: 94%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    height: 100%;
+}
+.allNewsCardTitle{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+    margin-top: 8px;
+    transition: all 0.1s;
+}
+.allNewsInlineInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.allNewsLine{
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+    height: 1px;
+    width: 100%;
+}
+.readingTime{
+    transition: all 0.1s;
+}
+.newsDate{
+    transition: all 0.1s;
 }
 }
 
@@ -5184,6 +5703,134 @@ body{
     object-fit: cover;
     object-position: center;
     transition: all 0.25s;
+}
+
+
+.AllNewsContainer{
+    opacity: 0;
+}
+.allNewsContent{
+    display: flex;
+    flex-direction: column;
+}
+.AllNewsTitle{
+    padding: 160px 20px 40px 20px;
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.paginationControlsContainer{
+    display: flex;
+    padding-bottom: 120px;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    align-self: center;
+    gap: 8px;
+}
+.paginationArrow{
+    cursor: pointer;
+    width: 34px;
+    padding: 4px;
+    transition: all 0.1s;
+}
+.paginationLinks{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+.paginationLink{
+    cursor: pointer;
+    width: 32px;
+    height: 32px;
+    font-size: 18px;
+    font-family: 'DM_Sans_SemiBold';
+    color: #979797;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.1s;
+}
+.paginationLink:hover{
+    color: #F7A524;
+}
+.paginationLink.active{
+    color: black;
+    font-size: 22px;
+    font-family: 'DM_Sans_ExtraBold';
+    transition: all 0.1s;
+}
+.paginationLink.active:hover{
+    color: #000000;
+    cursor: default;
+}
+.paginationArrow:hover{
+    filter: brightness(0);
+}
+.innerAllNewsContainer{
+    padding: 0px 20px 100px 20px;
+    width: 100%;
+}
+.allNewsGridContainer{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
+    row-gap: 70px;
+    column-gap: 30px;
+    width: 100%;
+}
+.allNewsCard{
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+}
+.allNewsImg{
+    width: 100%;
+    min-height:300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.allNewsImg img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.allNewsText{
+    width: 94%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    height: 100%;
+}
+.allNewsCardTitle{
+    font-size: 26px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+    line-height: 120%;
+    margin-top: 8px;
+    transition: all 0.1s;
+}
+.allNewsInlineInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+.allNewsLine{
+    background: linear-gradient(to right, #ffffff00, #CACACA, #ffffff00);
+    height: 1px;
+    width: 100%;
+}
+.readingTime{
+    transition: all 0.1s;
+}
+.newsDate{
+    transition: all 0.1s;
 }
 
 }   
