--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1745,7 +1745,7 @@ body{
     position: absolute;
     top: 0;
     left: 0;
-    margin-top: -100px;
+    margin-top: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1754,10 +1754,23 @@ body{
     height: 100dvh;
 }
 .loadingScreen h1{
-    font-family: 'DM_Sans_SemiBold';
+    font-family: 'ER_Garamond_Medium';
     font-size: 80px;
+    font-weight: 500;
     color: #1f1f1f;
 }
+
+
+
+.administrationContainer{
+    opacity: 0;
+}
+
+
+
+
+
+
 
 
 
