--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -3,7 +3,11 @@
     padding: 0;
     box-sizing: border-box;
     scrollbar-color: black white;
-    scrollbar-width:thin;;
+    scrollbar-width:thin;
+}
+*::selection{
+    background-color: black;
+    color:white;
 }
 @font-face {
     font-family: 'ER_Garamond_Medium';
@@ -1755,7 +1759,7 @@ body{
 }
 .loadingScreen h1{
     font-family: 'ER_Garamond_Medium';
-    font-size: 80px;
+    font-size: 50px;
     font-weight: 500;
     color: #1f1f1f;
 }
