--- a/my-first-react-app/src/administrationComponents/administration.css
+++ b/my-first-react-app/src/administrationComponents/administration.css
@@ -254,6 +254,22 @@
     font-family: 'DM_Sans_Regular';
     cursor: pointer;
 }
+.administrationHeaderContainer{
+    width: 100dvw;
+    height: 100dvh;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.administrationHeaderContainer img{
+    mask-image: linear-gradient(rgba(0, 0, 0, 1) 32%, rgba(0, 0, 0, 0) 93%);
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+}
 
 
 @media screen and (max-width: 1070px){
@@ -609,5 +625,15 @@
 .colaborationsInfoRow p{
     font-size: 15px;
     font-family: 'DM_Sans_Regular';
+}
+
+.administrationHeaderContainer{
+    width: 100dvw;
+    height: auto;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 }
