--- a/my-first-react-app/src/administrationComponents/administration.css
+++ b/my-first-react-app/src/administrationComponents/administration.css
@@ -255,6 +255,7 @@
     cursor: pointer;
 }
 .administrationHeaderContainer{
+    opacity: 0;
     width: 100dvw;
     height: 100dvh;
     overflow: hidden;
