--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1767,10 +1767,12 @@ body{
 
 
 .administrationContainer{
-    min-height: 100vh;
+    min-height: 100dvh;
     opacity: 0;
 }
-
+.contactsContainer{
+    min-height: 100dvh;
+}
 
 
 
