Add new styling

--- a/my-first-react-app/src/index.css
+++ b/my-first-react-app/src/index.css
@@ -1413,6 +1413,7 @@ body{
     line-height: 120%;
 }
 .bottomNewsText{
+    gap: 26px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
