--- a/my-first-react-app/src/administrationComponents/administration.css
+++ b/my-first-react-app/src/administrationComponents/administration.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     scrollbar-color: black white;
-    scrollbar-width:thin;;
+    scrollbar-width:thin;
 }
 @font-face {
     font-family: 'ER_Garamond_Medium';
@@ -30,10 +30,89 @@
     src: url(assets/fonts/Newsreader_36pt-Medium.ttf);
 }
 
-.colaborationsContainer{
+.comisionsContainer{
     opacity: 0;
     width: 100%;
     margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 30px;
+    padding: 0px 100px 0px 100px;
+    position: relative;
+}
+.comisionsTitle{
+    font-size: 56px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.comisionsOuterContainer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    overflow-X: auto;
+    padding-bottom: 14px;
+    scrollbar-color: rgb(207, 207, 207) white;
+    scrollbar-width:thin;
+}
+.comisionsScroller{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-items: stretch;
+    gap: 30px;
+}
+.comisionsCard{
+    display: flex;
+    flex-direction: column;
+    width: 480px;
+    gap: 12px;
+}
+.comisionImage{
+    width: 480px;
+    height: 360px;
+    overflow: hidden;
+}
+.comisionsCard:hover img{
+    scale: 1.02;
+}
+.comisionsCard:hover .comisionTitle{
+    color: #FFA314;
+}
+.comisionImage img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+    transition: all 0.25s;
+}
+.comisionTitle{
+    transition: all 0.1s;
+    font-size: 30px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+}
+.comisionMembers{
+    width: 95%;
+    font-size: 18px;
+    line-height: 170%;
+    color: #808080;
+    font-family: 'DM_Sans_Regular';
+}
+.comisionMembers span{
+    transition: all 0.1s;
+}
+.comisionMembers span:hover{
+    cursor: pointer;
+    color: black;
+}
+
+
+.colaborationsContainer{
+    opacity: 0;
+    width: 100%;
+    margin-top: 120px;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -274,6 +353,29 @@
 
 
 @media screen and (max-width: 1070px){
+
+.comisionsContainer{
+    opacity: 0;
+    width: 100%;
+    margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 30px;
+    padding: 0px 70px 0px 70px;
+    position: relative;
+}
+.comisionsCard{
+    display: flex;
+    flex-direction: column;
+    width: 460px;
+    gap: 12px;
+}
+.comisionImage{
+    width: 460px;
+    height: 350px;
+    overflow: hidden;
+}
 .colaborationsContainer{
     gap: 30px;
     padding: 0px 70px 0px 70px;
@@ -304,6 +406,28 @@
 }
 
 @media screen and (max-width: 950px){
+.comisionsContainer{
+    opacity: 0;
+    width: 100%;
+    margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 30px;
+    padding: 0px 50px 0px 50px;
+    position: relative;
+}
+.comisionsCard{
+    display: flex;
+    flex-direction: column;
+    width: 420px;
+    gap: 12px;
+}
+.comisionImage{
+    width: 420px;
+    height: 320px;
+    overflow: hidden;
+}
 .colaborationsContainer{
     gap: 30px;
     padding: 0px 50px 0px 50px;
@@ -337,7 +461,7 @@
     .colaborationsContainer{
     opacity: 0;
     width: 100%;
-    margin-top: 65px;
+    margin-top: 120px;
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -483,6 +607,37 @@
 
 
 @media screen and (max-width:500px){
+.comisionsContainer{
+    opacity: 0;
+    width: 100%;
+    margin-top: 65px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+    padding: 0px 20px 0px 20px;
+    position: relative;
+}
+.comisionsCard{
+    display: flex;
+    flex-direction: column;
+    width: 90dvw;
+    gap: 12px;
+}
+.comisionImage{
+    width: 90dvw;
+    height: 300px;
+    overflow: hidden;
+}
+.comisionsTitle{
+    padding-left: 5px;
+    font-size: 34px;
+    font-weight: 500;
+    font-family: "ER_Garamond_Medium";
+}
+.comisionMembers{
+    padding-left: 5px;
+}
 .aqcuisitionsTitle{
     font-size: 34px;
 }
@@ -531,7 +686,7 @@
 .colaborationsContainer{
     opacity: 0;
     width: 100%;
-    margin-top: 65px;
+    margin-top: 100px;
     display: flex;
     flex-direction: column;
     align-items: start;
