--- a/my-first-react-app/src/administrationComponents/administration.css
+++ b/my-first-react-app/src/administrationComponents/administration.css
@@ -622,7 +622,7 @@
     display: flex;
     flex-direction: column;
     width: 90dvw;
-    gap: 12px;
+    gap: 10px;
 }
 .comisionImage{
     width: 90dvw;
@@ -631,9 +631,23 @@
 }
 .comisionsTitle{
     padding-left: 5px;
-    font-size: 34px;
+    font-size: 30px;
     font-weight: 500;
     font-family: "ER_Garamond_Medium";
+}
+.comisionTitle{
+    transition: all 0.1s;
+    font-size: 30px;
+    font-family: 'ER_Garamond_Medium';
+    font-weight: 500;
+}
+.comisionMembers{
+    width: 95%;
+    font-size: 16px;
+    line-height: 170%;
+    color: #808080;
+    font-family: 'DM_Sans_Regular';
+    margin-top: -5px;
 }
 .comisionMembers{
     padding-left: 5px;
